--- a/index.html
+++ b/index.html
@@ -327,55 +327,18 @@
     <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">Diese Marken vertrauen auf eFLY</h2>
 
     <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6 items-center">
-
-      <a href="https://example.com/brand/develey" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73a7e06ce18e569c_63eb03f17c400f716d2082c8e52e755d_8.png" alt="Develey" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/titan" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e07cf275f45896349_13.png" alt="Titan" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/alphazoo" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73e8b461606df05f_a32a8c5ccc82fc58c70fde750a84623d_11.png" alt="Alphazoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/lillydoo" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9f0e26ccf806f5f712_f025d4d603e27e47859ffd5f395e734c_18.png" alt="Lillydoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/fackelmann" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e8397da8b3e62236e_3.png" alt="Fackelmann" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/edurino" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e12472cf8f113136e_12.png" alt="Edurino" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/weber" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png" alt="Weber" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/ava-may" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fbb70043f30e2e19c_15.png" alt="Ava&May" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/loewe" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e331bfcadfc375e97_8a49847f17bd7015a5320d5a60373b4c_14.png" alt="Loewe" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/liebscher" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e0de0526629ec0d73_5.png" alt="Liebscher" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/pickem" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40b0b13386bba17d466_28.png" alt="pick'em" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
-      <a href="https://example.com/brand/kip" target="_blank" rel="noopener" class="block">
-        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40bb1127fba343b9391_27.png" alt="kip" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-      </a>
-
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73a7e06ce18e569c_63eb03f17c400f716d2082c8e52e755d_8.png"  alt="Develey"    class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e07cf275f45896349_13.png"                                           alt="Titan"      class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73e8b461606df05f_a32a8c5ccc82fc58c70fde750a84623d_11.png"   alt="Alphazoo"   class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9f0e26ccf806f5f712_f025d4d603e27e47859ffd5f395e734c_18.png"    alt="Lillydoo"   class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e8397da8b3e62236e_3.png"                                     alt="Fackelmann" class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e12472cf8f113136e_12.png"                                    alt="Edurino"    class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png"                                     alt="Weber"      class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fbb70043f30e2e19c_15.png"                                    alt="Ava&May"    class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e331bfcadfc375e97_8a49847f17bd7015a5320d5a60373b4c_14.png"   alt="Loewe"      class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e0de0526629ec0d73_5.png"                                     alt="Liebscher"  class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40b0b13386bba17d466_28.png"                                   alt="pick'em"    class="h-16 w-full object-contain"/>
+      <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40bb1127fba343b9391_27.png"                                   alt="kip"        class="h-16 w-full object-contain"/>
     </div>
   </div>
 </section>
