--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>eFLY – One-Pager</title>
     <meta name="description" content="Draft-Onepager für Referenzen (Logos, Bilder, Videos), Team, Prozess und Kontakt. Eine Marke der eFLY." />
 
+
+<!-- Favicon -->
+<link rel="icon" href="hhttps://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" type="image/svg+xml">
+<link rel="icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="32x32" type="image/png">
+<link rel="icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="192x192" type="image/png">
+<link rel="apple-touch-icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="180x180">
+<link rel="shortcut icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg">
+
+<meta name="theme-color" content="#f07b16">
+
+
+
     <style>
       /* Pfeil-Icon am Impressum-Button animieren */
       #toggle-impressum .chev { transition: transform 200ms ease; }
