--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <!-- Favicon -->
 <link rel="icon" href="hhttps://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" type="image/svg+xml">
-<link rel="icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="32x32" type="image/png">
-<link rel="icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="192x192" type="image/png">
+<link rel="icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="32x32" type="image/svg">
+<link rel="icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="192x192" type="image/svg">
 <link rel="apple-touch-icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg" sizes="180x180">
 <link rel="shortcut icon" href="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/667d218493143fe75d35f397_Group%204612.svg">
 
