--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>eFLY – One-Pager</title>
+    <title>eFLY – Content</title>
     <meta name="description" content="Draft-Onepager für Referenzen (Logos, Bilder, Videos), Team, Prozess und Kontakt. Eine Marke der eFLY." />
 
 
@@ -665,7 +665,7 @@
 
           <div class="flex flex-wrap gap-3 md:justify-center">
             <a href="mailto:kontakt@efly-amz.com" class="inline-flex items-center rounded-xl bg-efly hover:opacity-90 text-white px-4 py-2 text-sm font-medium shadow-soft">E-Mail: kontakt@efly-amz.com</a>
-            <a href="tel:+4971150426681" class="inline-flex items-center rounded-xl bg-efly hover:opacity-90 text-white px-4 py-2 text-sm font-medium shadow-soft">Telefon: +49 (0)711 50426681</a>
+            <a href="tel:+49 1517 2311370" class="inline-flex items-center rounded-xl bg-efly hover:opacity-90 text-white px-4 py-2 text-sm font-medium shadow-soft">Telefon: +49 1517 2311370</a>
           </div>
 
           <div class="flex items-center gap-6 md:justify-end">
@@ -709,14 +709,13 @@
     <section id="impressum" class="hidden py-16 bg-[#454545] text-white">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-2xl font-semibold">Impressum</h2>
-        <p class="mt-2 text-sm text-slate-600">Platzhaltertext.</p>
         <div class="mt-6 space-y-2 text-sm text-slate-700">
           <p><strong>Unternehmen:</strong> eFLY Marketplace Services GmbH</p>
           <p><strong>Adresse:</strong> Neckarstraße 189-191 70190 Stuttgart</p>
           <p><strong>Ansprechpartner:</strong> Moritz Heller und Jonas Lamneck</p>
           <p><strong>Handelsregister:</strong> HRB 731079</p>
           <p><strong>USt-IdNr.:</strong> DE296767410</p>
-          <p><strong>Kontakt:</strong> Tel.: +49 (0)711 50426681 · E-Mail: kontakt@efly-amz.com</p>
+          <p><strong>Kontakt:</strong> Tel.: +49 1517 2311370 · E-Mail: kontakt@efly-amz.com</p>
           <p><strong>OS-Plattform:</strong> http://ec.europa.eu/consumers/odr</p>
         </div>
       </div>
@@ -726,7 +725,6 @@
     <section id="datenschutz" class="hidden py-16 bg-white border-t border-slate-200">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-2xl font-semibold">Datenschutzerklärung</h2>
-        <p class="mt-2 text-sm text-slate-600">Platzhaltertext.</p>
         <div class="mt-6 space-y-4 text-sm text-slate-700">
           <p>Kontakt: <a class="text-brand-700 hover:text-brand-800" href="mailto:kontakt@efly-amz.com">kontakt@efly-amz.com</a></p>
         </div>
@@ -736,7 +734,6 @@
     <section id="agb" class="hidden py-16 bg-white border-t border-slate-200">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-2xl font-semibold">Allgemeine Geschäftsbedingungen (AGB)</h2>
-        <p class="mt-2 text-sm text-slate-600">Platzhaltertext.</p>
         <div class="mt-6 space-y-4 text-sm text-slate-700">
           <p>Inhalt folgt.</p>
         </div>
